--- a/Home page/time/style.css
+++ b/Home page/time/style.css
@@ -9,8 +9,8 @@ body {
     min-height: 100vh;
     width: 100%;
     font-size: 16px;
-    background: #1a0101; 
-    color: #000000; 
+    background: #430c0c; 
+    color: #390e0e; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,6 +33,7 @@ body {
     background-color: #000000;
     box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    border-radius: 20px;
 }
 
 .img-container,
@@ -95,10 +96,11 @@ body {
 }
 
 .separator {
-    width: 20%;
+    width: 50%;
     height: 6px;
-    background-color: #556875;
+    background-color: #884040;
     margin-bottom: 16px;
+    border-radius: 20px;
 }
 
 .additional-info {
